Social Previews: fix previews overflowing

--- a/extensions/blocks/social-previews/modal.scss
+++ b/extensions/blocks/social-previews/modal.scss
@@ -32,6 +32,7 @@
 			outline: 0;
 			margin: 3px 0;
 			font-size: 0;
+			white-space: nowrap;
 
 			svg {
 				display: block;
@@ -46,21 +47,29 @@
 				box-shadow: 0px 0px 0px 2px $blue-medium-focus;
 			}
 		}
-
 	}
 
 	.components-tab-panel__tab-content {
 		padding: 10px;
 		background-color: $light-gray-100;
 		flex: 1;
+
+		> div {
+			display: flex;
+			justify-content: center;
+		}
 	}
 
-	@media ( min-width: $break-medium ) {
+	@media ( min-width: $break-small ) {
+		width: calc( 100vw - 40px );
+	}
+
+	@media ( min-width: $break-large ) {
 		flex-direction: row;
-		width: 900px;
+		width: calc( #{$break-large} - 40px );
 		min-height: 500px;
 
-		.components-tab-panel__tabs { 
+		.components-tab-panel__tabs {
 			flex-direction: column;
 			justify-content: flex-start;
 			padding: 24px;
@@ -93,25 +102,25 @@
 	.jetpack-social-previews__upgrade-description {
 		margin-bottom: 1em;
 	}
-	
+
 	.jetpack-social-previews__upgrade-heading {
 		font-size: 2em;
 		line-height: 1.15;
 	}
-	
+
 	.jetpack-social-previews__upgrade-feature-list {
 		list-style: none;
 		margin-bottom: 2em;
 		padding-left: 1em;
 		font-size: 1.1em;
 		line-height: 1.4;
-	
+
 		li {
 			position: relative;
 			margin-bottom: 12px;
-	
+
 			&:before {
-				content:  "\2713 ";
+				content: '\2713 ';
 				position: absolute;
 				left: -20px;
 				color: $alert-green;
@@ -126,7 +135,7 @@
 		grid-gap: 3em;
 		grid-template-columns: 1fr 1fr;
 		padding-top: 4em;
-	
+
 		.jetpack-social-previews__upgrade-illustration {
 			grid-column: 2;
 			grid-row: 1;
@@ -144,7 +153,7 @@
 		.jetpack-social-previews__upgrade-heading {
 			margin-top: 0;
 		}
-	
+
 		.jetpack-social-previews__upgrade-feature-list {
 			padding-left: 0;
 		}
@@ -154,5 +163,5 @@
 		.jetpack-social-previews__upgrade-description {
 			padding: 0 2em 2em;
 		}
-	}	
+	}
 }
